# mvr

./: .gitignore  Cargo.toml  README.md  create-new-release.sh
.github/actions/diffs/: action.yml
.github/workflows/: build-txs.yml  release.yml  rust-ci.yml
api/: Cargo.toml
api/migrations/2025-02-09-210732_base_schema/: up.sql
api/src/: db.rs  handler.rs  main.rs  models.rs  route.rs  schema.rs
api/src/handlers/: handler.rs  mod.rs  package.rs  resolution.rs  reverse_resolution.rs  type_resolution.rs
api/src/seed/: seed.rs
api/src/test/: seed.rs
api/src/types/: errors.rs  name.rs  name_service.rs  named_type.rs
app/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
app/dot-move/: package.json  pnpm-lock.yaml  vite.config.ts
app/dot-move/src/: main.tsx
app/src/: fonts.ts  index.css  main.tsx
app/src/app/: layout.tsx  (+1 more)
ci/: client.yaml  index.js  integration_test.sh  package.json  pnpm-lock.yaml
crates/api/: Cargo.toml
crates/ci-tests/: Cargo.toml
crates/mvr-api/: .gitignore  Cargo.toml  README.md
crates/mvr-api/src/: errors.rs  lib.rs  main.rs  route.rs
crates/mvr-api/src/data/: app_state.rs  mod.rs  name_analytics.rs  package_analytics.rs  package_by_name_loader.rs  package_dependencies.rs  package_dependents.rs  package_resolver.rs  reader.rs  resolution.rs  resolution_loader.rs  reverse_resolution.rs  reverse_resolution_loader.rs
crates/mvr-api/src/handlers/: mod.rs  names.rs  package_address.rs  resolution.rs  reverse_resolution.rs  sitemap.rs  struct_definition.rs  type_resolution.rs
crates/mvr-api/src/metrics/: middleware.rs  mod.rs
crates/mvr-api/src/seed/: seed.rs
crates/mvr-api/src/utils/: pagination.rs
crates/mvr-api/tests/: mvr_api_tests.rs  mvr_test_cluster.rs
crates/mvr-api/tests/snapshots/: mvr_api_tests__basic_search.snap  mvr_api_tests__bulk_lookup_limit_exceeded.snap  mvr_api_tests__package_by_name-2.snap  mvr_api_tests__package_by_name-3.snap  mvr_api_tests__package_by_name.snap
crates/mvr-cli/: Cargo.toml  README.md
crates/mvr-cli/src/: binary_version_check.rs  commands.rs  constants.rs  errors.rs  git.rs  lib.rs  main.rs
crates/mvr-cli/src/tests/: unit_tests.rs
crates/mvr-cli/src/types/: api_data.rs  api_types.rs  app_record.rs  mod.rs  package.rs  resolver_alt.rs
crates/mvr-cli/src/utils/: api_data.rs  binary_version_check.rs  git.rs  manifest.rs  mod.rs  sui_binary.rs
crates/mvr-cli/tests/: manifest_parsing_tests.rs  unit_tests.rs
crates/mvr-cli/tests/snapshots/: manifest_parsing_tests__manifest_with_no_dependencies.snap  manifest_parsing_tests__regular_manifest.snap  unit_tests__local_dep_to_git_dep.snap  unit_tests__local_dep_to_git_dep.snap.new
crates/mvr-cli/tests/test_data/test_local_dep_to_git/: Move.toml
crates/mvr-indexer/: Cargo.toml  README.md
crates/mvr-indexer/examples/: download_checkpoint.rs  immediate_dependency_backfill.rs
crates/mvr-indexer/src/: lib.rs  main.rs  models.rs
crates/mvr-indexer/src/handlers/: git_info_handler.rs  mod.rs  name_record_handler.rs  package_handler.rs  package_info_handler.rs
crates/mvr-indexer/tests/: db_fix.rs  mvr_data_tests.rs
crates/mvr-indexer/tests/checkpoints/git_infos_write/: 111890386.chk  git_infos.snapshot
crates/mvr-indexer/tests/checkpoints/immediate_dependency/: 92045642.chk
crates/mvr-indexer/tests/checkpoints/name_records_write/: 116129830.chk  name_records.snapshot
crates/mvr-indexer/tests/checkpoints/package_infos_write/: 119751079.chk  package_infos.snapshot
crates/mvr-indexer/tests/checkpoints/packages_write/: 0.chk  package_dependencies.snapshot  packages.snapshot
crates/mvr-indexer/tests/snapshots/: mvr_data_tests__git_infos_write:git_infos.snap  mvr_data_tests__git_infos_write__git_infos.snap  mvr_data_tests__immediate_dependency__package_dependencies.snap  mvr_data_tests__immediate_dependency__packages.snap  mvr_data_tests__name_records_write:name_records.snap  mvr_data_tests__name_records_write__name_records.snap  mvr_data_tests__package_infos_write:package_infos.snap  mvr_data_tests__package_infos_write__package_infos.snap  mvr_data_tests__packages_write:package_dependencies.snap  mvr_data_tests__packages_write:packages.snap  mvr_data_tests__packages_write__package_dependencies.snap  mvr_data_tests__packages_write__packages.snap
crates/mvr-schema/: Cargo.toml
crates/mvr-schema/migrations/2025-02-10-104023_mvr/: up.sql
crates/mvr-schema/migrations/2025-04-02-095701_search_indexes/: down.sql  up.sql
crates/mvr-schema/migrations/2025-04-15-124613_analytics_and_indexes/: down.sql  up.sql
crates/mvr-schema/migrations/2025-05-21-101249_immediate_dependency/: down.sql  up.sql
crates/mvr-schema/src/: models.rs  schema.rs
crates/mvr-schema/src/migrations/2025-02-10-104023_mvr/: up.sql
crates/mvr-types/: Cargo.toml
crates/mvr_types/: Cargo.toml
docker/mvr-api/: Dockerfile  entry.sh
docker/mvr-indexer/: Dockerfile  build.sh  entry.sh
dotmove-cli/: Cargo.toml  Makefile
dotmove-cli/src/: main.rs
mvr-cli/: Cargo.toml  README.md  build.rs
mvr-cli/scripts/: install.sh
mvr-cli/src/: commands.rs  constants.rs  lib.rs  main.rs
mvr-cli/src/helpers/: constants.rs  mod.rs  sui.rs
mvr-cli/src/tests/: unit_tests.rs
mvr-cli/src/types/: app_record.rs  mod.rs  package.rs
mvr-indexer/: Cargo.toml  README.md
mvr-indexer/src/: main.rs  models.rs  schema.rs
mvr-indexer/src/handlers/: mod.rs  package_handler.rs
mvr-indexer/src/migrations/2025-02-10-104023_mvr/: down.sql  up.sql
scripts/: README.md  graphql.mainnet.config.toml  package-info.mainnet.json  package-info.testnet.json  package.json  pnpm-lock.yaml  published.mainnet.json  published.testnet.json  tsconfig.json  utils.ts
scripts/multisig/: mvr-registrations.ts  upgrade-mvr.ts  upgrade-packageinfo.ts
scripts/sdk/: dot-move.ts  test.ts
scripts/src/: demoing.ts  init-for-testing.ts  localnet-setup.ts  lookups-v2.ts  lookups.ts  publish-mvr.ts  publish-package-info.ts  publish.ts  randomtests.ts  raw.ts  registration-helpers.ts  setup-package-info.ts  test.ts
scripts/tx/: tx-data.txt
(+225 files in other folders)
