[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["cors"] }
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "serde_json"] }
dotenvy = "0.15.7"
