[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["cors"] }
diesel = { version = "2.2.7", features = ["serde_json"] }
dotenvy = "0.15.7"
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }
anyhow = "1.0.95"
regex = "1.11.1"
once_cell = "1.20.3"
thiserror = "2.0.11"
rand = "0.9.0"
async-trait = "0.1.86"
bcs = "0.1.6"
sui-package-resolver = { git = "https://github.com/MystenLabs/sui.git" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git" }
sui-types = { git = "https://github.com/MystenLabs/sui.git" }

