[package]
name = "dotmove"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", package = "sui-sdk" }
sui-config = { git = "https://github.com/MystenLabs/sui.git", package = "sui-config" }
anyhow = "1.0"
tokio = "1.38.0"
serde = "1.0.204"
toml = "0.8.14"
serde_json = "1.0.120"
