[package]
name = "mvr"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "mvr"
path = "src/main.rs"

[lib]
name = "mvr"
path = "src/lib.rs"

[[test]]
name = "unit_tests"
path = "src/tests/unit_tests.rs"

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", package = "sui-sdk" }
sui-config = { git = "https://github.com/MystenLabs/sui.git", package = "sui-config" }

anyhow = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
tempfile = "3.2"
tokio = "1.38.0"
url = "2.5.2"
toml_edit = "0.22.21"
toml = "0.8.19"
regex = "1.10.5"
yansi = "1.0.1"
comfy-table = "7.1.1"
colored = "2.1.0"

[dev-dependencies]
expect-test = "1.1"
