[package]
name = "mvr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-package-resolver = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }

async-graphql = { version = "7.0.15", features = ["dataloader", "boxed-trait"] }

axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
regex = "1.11.1"
rand = "0.9.0"
futures = "0.3.31"
serde = { workspace = true, features = ["derive"] }
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
once_cell.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
bcs.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
mvr-types = { path = "../mvr-types" }
mvr-schema = { path = "../mvr-schema" }

[[bin]]
name = "mvr-api"
path = "src/main.rs"
