[package]
name = "mvr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-package-resolver = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
async-graphql = { version = "=7.0.1", features = ["dataloader"] }
async-graphql-value = "=7.0.1"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
regex = "1.11.1"
rand = "0.9.0"

futures.workspace = true
serde = { workspace = true, features = ["derive"] }
diesel = { workspace = true, features = ["serde_json"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
once_cell.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
bcs.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
sui-pg-db.workspace = true
prometheus.workspace = true
sui-indexer-alt-metrics.workspace = true
mysten-metrics.workspace = true
move-core-types.workspace = true
sui-types.workspace = true
telemetry-subscribers.workspace = true
tokio-util.workspace = true
sui-sdk-types = { workspace = true, features = ["serde"] }
mvr-types = { path = "../mvr-types" }
mvr-schema = { path = "../mvr-schema" }

[dev-dependencies]
sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
move-binary-format = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
reqwest = { version = "0.12.11", features = ["json"] }
insta = "1.42.2"

[[bin]]
name = "mvr-api"
path = "src/main.rs"
