[package]
name = "mvr-indexer"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = "1.38.0"
tokio-util = "0.7.13"
futures = "0.3.31"
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
sui-pg-db = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
sui-config = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
sui-move-build = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
sui-data-ingestion-core = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
mysten-metrics = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "e919e84" }

move-binding-derive = { git = "https://github.com/MystenLabs/move-binding.git", rev = "1fb0964b" }
move-types = { git = "https://github.com/MystenLabs/move-binding.git", rev = "1fb0964b" }

sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", features = ["serde"], rev = "86a9e06" }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "86a9e06" }

mvr-schema = { path = "../mvr-schema" }
mvr-types = { path = "../mvr-types" }

clap = { workspace = true, features = ["env"] }
tempfile = "3.13.0"
prometheus = "0.13.4"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
bigdecimal = "0.4.5"
itertools = "0.14.0"
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
tracing.workspace = true
async-trait.workspace = true
bcs.workspace = true
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true

[dev-dependencies]

[[bin]]
name = "mvr-indexer"
path = "src/main.rs"

