[package]
name = "mvr-indexer"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = "1.38.0"
futures = "0.3.31"
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
sui-config = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
sui-data-ingestion-core = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
reqwest = { version = "^0.12", features = ["blocking", "json"] }

move-binding-derive = { git = "https://github.com/MystenLabs/move-binding.git", rev = "227897dd" }
move-types = { git = "https://github.com/MystenLabs/move-binding.git", rev = "227897dd" }

sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types", features = ["serde"], rev = "86a9e06" }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "86a9e06" }

mvr-schema = { path = "../mvr-schema" }
mvr-types = { path = "../mvr-types" }

clap = { workspace = true, features = ["env"] }
tempfile = "3.13.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
bigdecimal = "0.4.5"
itertools = "0.14.0"
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel-async = { workspace = true, features = ["bb8", "postgres"] }
tracing.workspace = true
async-trait.workspace = true
bcs.workspace = true
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true

sui-pg-db.workspace = true
prometheus.workspace = true
sui-indexer-alt-metrics.workspace = true
mysten-metrics.workspace = true
sui-types.workspace = true
move-core-types.workspace = true
telemetry-subscribers.workspace = true
tokio-util.workspace = true

[dev-dependencies]
sui-storage = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }
sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"]}
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto" }
insta = "1.42.2"

[[bin]]
name = "mvr-indexer"
path = "src/main.rs"

[[example]]
name = "download-checkpoint"
path = "examples/download_checkpoint.rs"
