[package]
name = "mvr-schema"
version = "0.1.0"
edition = "2021"

[dependencies]
sui-field-count = { git = "https://github.com/MystenLabs/sui.git", rev = "bcd46ac00812090a5e12e6efc197f7718b81d26b"}
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel_migrations.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
